// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@no-llm renderBriefTerminal > renders the canonical Brief at detail=full noColor=false 1`] = `
"[1mCheapest Sony WH-1000XM5 today[22m
╭──────────────────────────────────────────────────────────────────────────────╮
│ Lowest price is [1m$328[22m at Amazon (down from a $399 list price). All three      │
│ tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this │
│ week. [36m[1][39m[36m[3][39m                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯

[1mKey Findings[22m
[32m•[39m Amazon — $328, in stock, free shipping [36m[1][39m
[32m•[39m Best Buy — $349, in stock [36m[2][39m
[32m•[39m Walmart — $342 via a third-party seller [36m[3][39m
[33m◦[39m Prices have trended upward since last week, so buying now is reasonable.[2m (editorial)[22m

[1mComparison[22m
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│[36m Retailer                 [39m│[36m Price                   [39m│[36m In stock                [39m│
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

[1mPrice & availability[22m
All three major retailers currently stock the WH-1000XM5. Amazon has the lowest
sticker at $328, down from a $399 list price, followed by Walmart at $342 and
Best Buy at $349. [1][2][3]

[1mCaveats[22m
The Walmart listing is fulfilled by a third-party seller, so warranty terms
differ from a first-party sale. [3]

[1mNotices[22m
[33m⚠ example-blog.com: fetch timed out after 8000ms[39m

[1mSources[22m
[36m[1][39m Sony WH-1000XM5 Wireless Headphones — Amazon [2m— amazon.com[22m
[2m    https://www.amazon.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:00.000Z · published 2026-06-28T00:00:00.000Z[22m
[36m[2][39m Sony WH-1000XM5 | Best Buy [2m— bestbuy.com[22m
[2m    https://www.bestbuy.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:05.000Z[22m
[36m[3][39m Sony WH-1000XM5 Headphones - Walmart [2m— walmart.com[22m
[2m    https://www.walmart.com/ip/sony-wh-1000xm5  fetched 2026-07-01T09:00:10.000Z[22m"
`;

exports[`@no-llm renderBriefTerminal > renders the canonical Brief at detail=full noColor=true 1`] = `
"Cheapest Sony WH-1000XM5 today
 Lowest price is $328 at Amazon (down from a $399 list price). All three        
 tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this   
 week. [1][3]                                                                   

Key Findings
• Amazon — $328, in stock, free shipping [1]
• Best Buy — $349, in stock [2]
• Walmart — $342 via a third-party seller [3]
◦ Prices have trended upward since last week, so buying now is reasonable. (editorial)

Comparison
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│ Retailer                 │ Price                   │ In stock                │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

Price & availability
All three major retailers currently stock the WH-1000XM5. Amazon has the lowest
sticker at $328, down from a $399 list price, followed by Walmart at $342 and
Best Buy at $349. [1][2][3]

Caveats
The Walmart listing is fulfilled by a third-party seller, so warranty terms
differ from a first-party sale. [3]

Notices
⚠ example-blog.com: fetch timed out after 8000ms

Sources
[1] Sony WH-1000XM5 Wireless Headphones — Amazon — amazon.com
    https://www.amazon.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:00.000Z · published 2026-06-28T00:00:00.000Z
[2] Sony WH-1000XM5 | Best Buy — bestbuy.com
    https://www.bestbuy.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:05.000Z
[3] Sony WH-1000XM5 Headphones - Walmart — walmart.com
    https://www.walmart.com/ip/sony-wh-1000xm5  fetched 2026-07-01T09:00:10.000Z"
`;

exports[`@no-llm renderBriefTerminal > renders the canonical Brief at detail=overview noColor=false 1`] = `
"[1mCheapest Sony WH-1000XM5 today[22m
╭──────────────────────────────────────────────────────────────────────────────╮
│ Lowest price is [1m$328[22m at Amazon (down from a $399 list price). All three      │
│ tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this │
│ week. [36m[1][39m[36m[3][39m                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯

[1mSources[22m
[36m[1][39m Sony WH-1000XM5 Wireless Headphones — Amazon [2m— amazon.com[22m
[36m[2][39m Sony WH-1000XM5 | Best Buy [2m— bestbuy.com[22m
[36m[3][39m Sony WH-1000XM5 Headphones - Walmart [2m— walmart.com[22m"
`;

exports[`@no-llm renderBriefTerminal > renders the canonical Brief at detail=overview noColor=true 1`] = `
"Cheapest Sony WH-1000XM5 today
 Lowest price is $328 at Amazon (down from a $399 list price). All three        
 tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this   
 week. [1][3]                                                                   

Sources
[1] Sony WH-1000XM5 Wireless Headphones — Amazon — amazon.com
[2] Sony WH-1000XM5 | Best Buy — bestbuy.com
[3] Sony WH-1000XM5 Headphones - Walmart — walmart.com"
`;

exports[`@no-llm renderBriefTerminal > renders the canonical Brief at detail=standard noColor=false 1`] = `
"[1mCheapest Sony WH-1000XM5 today[22m
╭──────────────────────────────────────────────────────────────────────────────╮
│ Lowest price is [1m$328[22m at Amazon (down from a $399 list price). All three      │
│ tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this │
│ week. [36m[1][39m[36m[3][39m                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯

[1mKey Findings[22m
[32m•[39m Amazon — $328, in stock, free shipping [36m[1][39m
[32m•[39m Best Buy — $349, in stock [36m[2][39m
[32m•[39m Walmart — $342 via a third-party seller [36m[3][39m
[33m◦[39m Prices have trended upward since last week, so buying now is reasonable.[2m (editorial)[22m

[1mComparison[22m
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│[36m Retailer                 [39m│[36m Price                   [39m│[36m In stock                [39m│
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

[1mNotices[22m
[33m⚠ example-blog.com: fetch timed out after 8000ms[39m

[1mSources[22m
[36m[1][39m Sony WH-1000XM5 Wireless Headphones — Amazon [2m— amazon.com[22m
[36m[2][39m Sony WH-1000XM5 | Best Buy [2m— bestbuy.com[22m
[36m[3][39m Sony WH-1000XM5 Headphones - Walmart [2m— walmart.com[22m"
`;

exports[`@no-llm renderBriefTerminal > renders the canonical Brief at detail=standard noColor=true 1`] = `
"Cheapest Sony WH-1000XM5 today
 Lowest price is $328 at Amazon (down from a $399 list price). All three        
 tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this   
 week. [1][3]                                                                   

Key Findings
• Amazon — $328, in stock, free shipping [1]
• Best Buy — $349, in stock [2]
• Walmart — $342 via a third-party seller [3]
◦ Prices have trended upward since last week, so buying now is reasonable. (editorial)

Comparison
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│ Retailer                 │ Price                   │ In stock                │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

Notices
⚠ example-blog.com: fetch timed out after 8000ms

Sources
[1] Sony WH-1000XM5 Wireless Headphones — Amazon — amazon.com
[2] Sony WH-1000XM5 | Best Buy — bestbuy.com
[3] Sony WH-1000XM5 Headphones - Walmart — walmart.com"
`;
